cambie el index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Vite App</title>
   </head>
   <body>
+    <h1>Github Pages</h1>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <p>Mi página funcionando con githab</p>
   </body>
 </html>
