--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <span>Hola, soy pablo</span>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
